Fix artwork page width issue on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -136,8 +136,8 @@ section {
     }
 
     .content {
-        margin-left: 30px; /* 모바일에서 사이드바 크기 */
-        width: calc(100% - 300px);
+        margin-left: 100px; /* 모바일에서 사이드바 크기 */
+        width: calc(100% - 100px);
     }
 
     .artwork-container {
